# wandersmart-first-try

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
Documents/: ProjectPlan.md  app_addition.md
src/: path_utils.py
src/wandersmart/: app.py  crew.py  main.py
src/wandersmart/config/: tasks.yaml
tests/: test_crew.py
