[project]
name = "wandersmart"
version = "0.1.0"
description = "WanderSmart using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
wandersmart = "wandersmart.main:run"
run_crew = "wandersmart.main:run"
train = "wandersmart.main:train"
replay = "wandersmart.main:replay"
test = "wandersmart.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
